2008-03-18  Rodney Dawes  <dobey@wayofthemonkey.com>

        Fix Mac build from commit of r31123.

        Add a typedef for NSView* to PlatformWidget, remove duplicate PluginMessageThrottlerWin definition.

        * platform/Widget.h:
        * WebCore.vcproj/WebCore.vcproj:

2008-03-18  Rodney Dawes  <dobey@wayofthemonkey.com>

        Reviewed by Jon Honeycutt.

        Add PluginView.cpp and npapi.cpp to build files.
        Copy win/PluginViewWin.cpp to PluginView.cpp for shared code.
        Split Windows specific code out of PluginView.cpp.
        Add #if USE(NPOBJECT) around dependant code.
        Use npruntime_internal.h instead of npapi.h.
        Add PlatformWidget typedef to Widget.h.
        Update WidgetGtk.cpp for the PlatformWidget usage.
        Add needed methods to TemporaryLinkStubs for GTK+ port.

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCoreSources.bkl:
        * WebCore.vcproj/WebCore.vcproj:
        * plugins/win/PluginViewWin.cpp:
        * plugins/PluginView.cpp:
        * plugins/PluginView.h:
        * plugins/npapi.cpp:
        * platform/Widget.h:
        * platform/gtk/WidgetGtk.cpp:
        * platform/gtk/TemporaryLinkStubs.cpp:

2008-03-17  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - speed up document property fetching (eliminate the AtomicString
          objects made during document property lookup)

        3% speedup for Acid3 test 26

        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::JSDOMWindowBase::getOwnPropertySlot): Use AtomicString::find to
        locate the AtomicString, only if already present. Also call the new faster
        versions of the hasNamedItem and hasElementWithId functions that don't
        ref/deref the AtomicStringImpl, get inlined, etc.
        * bindings/js/JSHTMLDocumentCustom.cpp:
        (WebCore::JSHTMLDocument::canGetItemsForName): Ditto.
        (WebCore::writeHelper): Use a Vector instead of a String to build up