@@ -16,8 +16,10 @@ void QWebPluginFactory::refreshPlugins()
 
 bool QWebPluginFactory::extension(Extension extension, const ExtensionOption *option, ExtensionReturn *output)
 {
+    return false;
 }
 
 bool QWebPluginFactory::supportsExtension(Extension extension) const
 {
+    return false;
 }
